--- a/2023/VSProj/VSProj.vcxproj
+++ b/2023/VSProj/VSProj.vcxproj
@@ -124,6 +124,8 @@
     <ClCompile Include="FileHandler.cpp" />
     <ClCompile Include="Solution\J13v1.cpp" />
     <ClCompile Include="Solution\J13v2.cpp" />
+    <ClCompile Include="Solution\J15v1.cpp" />
+    <ClCompile Include="Solution\J15v2.cpp" />
     <ClCompile Include="solution\J1v1.cpp" />
     <ClCompile Include="solution\J1v2.cpp" />
     <ClCompile Include="solution\J2v1.cpp" />
@@ -146,6 +148,7 @@
     <ClInclude Include="FileHandler.h" />
     <ClInclude Include="solution\J1.h" />
     <ClInclude Include="Solution\J13.h" />
+    <ClInclude Include="Solution\J15.h" />
     <ClInclude Include="solution\J2.h" />
     <ClInclude Include="solution\J3.h" />
     <ClInclude Include="solution\J4.h" />
