--- a/2023/VSProj/VSProj.vcxproj.filters
+++ b/2023/VSProj/VSProj.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="Solution\J15v2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Solution\J18v1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileHandler.h">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Solution\J15.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Solution\J18.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
