--- a/2023/VSProj/VSProj.vcxproj.filters
+++ b/2023/VSProj/VSProj.vcxproj.filters
@@ -75,13 +75,16 @@
     <ClCompile Include="Solution\J13v2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Solution\J15v1.cpp">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="Solution\J15v2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Solution\J18v1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Solution\J15v1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Solution\J18v2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -116,10 +119,10 @@
     <ClInclude Include="Solution\J13.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Solution\J15.h">
+    <ClInclude Include="Solution\J18.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Solution\J18.h">
+    <ClInclude Include="Solution\J15.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
