--- a/2023/VSProj/VSProj.vcxproj
+++ b/2023/VSProj/VSProj.vcxproj
@@ -124,6 +124,7 @@
     <ClCompile Include="FileHandler.cpp" />
     <ClCompile Include="Solution\J13v1.cpp" />
     <ClCompile Include="Solution\J13v2.cpp" />
+    <ClCompile Include="Solution\J14v1.cpp" />
     <ClCompile Include="Solution\J15v1.cpp" />
     <ClCompile Include="Solution\J15v2.cpp" />
     <ClCompile Include="Solution\J18v1.cpp" />
@@ -150,6 +151,7 @@
     <ClInclude Include="FileHandler.h" />
     <ClInclude Include="solution\J1.h" />
     <ClInclude Include="Solution\J13.h" />
+    <ClInclude Include="Solution\J14.h" />
     <ClInclude Include="Solution\J15.h" />
     <ClInclude Include="Solution\J18.h" />
     <ClInclude Include="solution\J2.h" />
