--- a/2023/VSProj/VSProj.vcxproj.filters
+++ b/2023/VSProj/VSProj.vcxproj.filters
@@ -87,6 +87,12 @@
     <ClCompile Include="Solution\J18v2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Solution\J14v1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Solution\J14v2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileHandler.h">
@@ -123,6 +129,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Solution\J15.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Solution\J14.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
