--- a/2023/VSProj/VSProj.vcxproj
+++ b/2023/VSProj/VSProj.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="Solution\J13v1.cpp" />
     <ClCompile Include="Solution\J13v2.cpp" />
     <ClCompile Include="Solution\J14v1.cpp" />
+    <ClCompile Include="Solution\J14v2.cpp" />
     <ClCompile Include="Solution\J15v1.cpp" />
     <ClCompile Include="Solution\J15v2.cpp" />
     <ClCompile Include="Solution\J18v1.cpp" />
