--- a/2023/VSProj/VSProj.vcxproj.filters
+++ b/2023/VSProj/VSProj.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="Solution\J14v2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Solution\Visualiser\Application.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileHandler.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Solution\J14.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Solution\Visualiser\Application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
