It's fricking working

--- a/2023/VSProj/VSProj.vcxproj
+++ b/2023/VSProj/VSProj.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="solution\J9v1.cpp" />
     <ClCompile Include="Solution\J9v2.cpp" />
     <ClCompile Include="Solution\Visualiser\Application.cpp" />
+    <ClCompile Include="Solution\Visualiser\Window.cpp" />
     <ClCompile Include="VSProj.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +179,7 @@
     <ClInclude Include="solution\J8.h" />
     <ClInclude Include="solution\J9.h" />
     <ClInclude Include="Solution\Visualiser\Application.h" />
+    <ClInclude Include="Solution\Visualiser\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
