--- a/2024/VSProj2024/VSProj2024.vcxproj
+++ b/2024/VSProj2024/VSProj2024.vcxproj
@@ -133,6 +133,8 @@
     <ClCompile Include="Solution\J1v2.cpp" />
     <ClCompile Include="Solution\J2v1.cpp" />
     <ClCompile Include="Solution\J2v2.cpp" />
+    <ClCompile Include="Solution\J3v1.cpp" />
+    <ClCompile Include="Solution\J3v2.cpp" />
     <ClCompile Include="solution\visualiser\Application.cpp" />
     <ClCompile Include="solution\visualiser\Window.cpp" />
   </ItemGroup>
@@ -140,6 +142,7 @@
     <ClInclude Include="FileHandler.h" />
     <ClInclude Include="Solution\J1.h" />
     <ClInclude Include="Solution\J2.h" />
+    <ClInclude Include="Solution\J3.h" />
     <ClInclude Include="solution\visualiser\Application.h" />
     <ClInclude Include="solution\visualiser\Window.h" />
   </ItemGroup>
