--- a/2024/VSProj2024/VSProj2024.vcxproj.filters
+++ b/2024/VSProj2024/VSProj2024.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="Solution\J2v2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Solution\J3v1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Solution\J3v2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="solution\visualiser\Application.h">
@@ -54,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Solution\J2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Solution\J3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
