--- a/2024/VSProj2024/VSProj2024.vcxproj.filters
+++ b/2024/VSProj2024/VSProj2024.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="..\..\CPP_Utils\FileHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\CPP_Utils\AStar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Solution\**\*.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\CPP_Utils\include\FileHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\CPP_Utils\include\AStar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
